--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <div id="loadingScreen" class="flex center">
             <img src="./assets/images/preloader.gif" alt="loading screen"/>
         </div>
-        <header'><nav class='nav' id='navbar-default1'>
+        <header>
+            <nav class='nav' id='navbar-default1'>
             <div class='container'>
                 <div  class='headIcons'>
                     <!-- icon-responsive -->
@@ -93,9 +94,9 @@
                 </div>
             </div>
         </nav>
-    </body>
-</html></header><main>
-<div id="registrationPage" class="main-wrapper rounded">
+       </header>
+<main>
+   <div id="registrationPage" class="main-wrapper rounded">
     <form action="">
         <h2>РЕГИСТРАЦИЯ</h2>
         <div class="flex space-between">
