--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </a>
             </div>
             <!-- logo -->
-            <div id="logo-wrapper" class="col-xs-6 col-md-12 padding-0">
+            <div id="logo-wrapper">
               <a href="#" class="navbar-logo">
                 <img
                   id="whiteLogo"
@@ -71,7 +71,7 @@
                       style="width: 10px; height: 10px"
                       href="#"
                     >
-                      <div style="width: 30px; height: 30px" class="tooltip">
+                      <div class="tooltip">
                         <img
                           src="./assets/images/tel-white.svg"
                           id="whitetel"
@@ -190,7 +190,7 @@
               />
               <div class="caption">CARD5</div>
             </div>
-            <div class="dots" style="text-align: center">
+            <div class="dots">
               <span class="dot" onclick="currentSlide(1)"></span>
               <span class="dot" onclick="currentSlide(2)"></span>
               <span class="dot" onclick="currentSlide(3)"></span>
