Put a placeholder under the header for all pages except for home

--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
           </div>
         </div>
       </div>
+      <div id="placeholder"></div>
       <div id="menuPage">
         <nav id="menuNav"></nav>
         <div id="allDealsPage"></div>
