--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
                 <a href="#" class="font-bold">РЕСТОРАНТИ</a>
               </li>
               <li class="visible-resposnsive">
-                <a href="#" class="font-bold">АЛЕРГЕНИ</a>
+                <a href="https://www.dominos.bg/AllergensBG-2021.pdf" class="font-bold">АЛЕРГЕНИ</a>
               </li>
               <li class="visible-resposnsive">
-                <a href="#" class="font-bold">ЗАЩИТА НА ЛИЧНИТЕ ДАННИ</a>
+                <a href="https://www.dominos.bg/GDPR/privacy_policy_bg.pdf" class="font-bold">ЗАЩИТА НА ЛИЧНИТЕ ДАННИ</a>
               </li>
             </ul>
           </div>
@@ -441,7 +441,84 @@
         />
       </div>
     </main>
-    <footer></footer>
+    <footer class='margin-top-25'>
+      <div class='white'>
+        <div class='footer-container'>
+          <div class='col-sm-12 padding-top-20 text-center'>
+            <ul class="list">
+              <li>
+                <a href="#" class="menu-color open-modal">МЕНЮ</a>
+              </li>
+              <li>
+                <a href="#" class="menu-color">РЕСТОРАНТИ</a>
+              </li>
+              <li>
+                <a href="#" class="menu-color">СВЪРЖЕТЕ СЕ С НАС</a>
+              </li>
+              <li>
+                <a href="#" class="menu-color">УСЛОВИЯ ЗА ПОЛЗВАНЕ</a>
+              </li>
+              <li>
+                <a href="https://www.dominos.bg/AllergensBG-2021.pdf" class="menu-color">АЛЕРГЕНИ</a>
+              </li>
+              <li>
+                <a href="#" class="menu-color">КАНДИДАТСТВАНЕ ЗА РАБОТА</a>
+              </li>
+              <li>
+                <a href="https://www.dominos.bg/GDPR/privacy_policy_bg.pdf" class="menu-color">ПОЛИТИКА ЗА ЗАЩИТА НА ЛИЧНИ ДАННИ</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-xs-12 text-center">
+            <div class="social-container">
+              <div class="tooltip tel">
+              <a href="#" class="col-xs-4 ">
+               <img src="assets/images/logos/070012525.svg" alt='070012525'class='telFooter' id='tel070012525'>
+               <img src="assets/images/tel.svg" alt='telefon' class='telFooter' id='telImage'>
+               <span class="tooltiptext">0700-1-2525</span>
+              </a>
+            </div>
+            <div class="tooltip">
+              <a class="col-xs-4" href='https://www.facebook.com/DominosBulgaria'>
+                <img src="assets/images/logos/facebook.svg" alt="facebook">
+                <span class="tooltiptext">Facebook</span>
+              </a>
+              </div>
+              <div class="tooltip">
+              <a class="col-xs-4" href='https://twitter.com/DominosBulgaria'>
+                <img src="assets/images/logos/twitter.svg" alt="twitter">
+                <span class="tooltiptext">Twitter</span>
+              </a>
+            </div>
+            <div class="tooltip">
+              <a class="col-xs-4" href='https://www.instagram.com/dominos_bg/'>
+                <img src="assets/images/logos/instagram.svg" alt="instagram">
+                <span class="tooltiptext">Instagram</span>
+              </a>
+            </div>
+            <div class="tooltip">
+              <a class="col-xs-4" href='https://plus.google.com/u/0/111958562895938630854'>
+                <img src="assets/images/logos/googleplus.svg" alt="googleplus">
+                <span class="tooltiptext">Google+</span>
+              </a>
+            </div>
+            <div class="tooltip">
+              <a class="col-xs-4" href='https://www.youtube.com/channel/UCUTBiIm_r68gSa1JY2tgDLg'>
+                <img src="assets/images/logos/youtube.svg" alt="youtube">
+                <span class="tooltiptext">Youtube</span>
+              </a>
+            </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+      <div class='light-grey-bg'>
+        <div class='footer-container'>
+          <p id="copyright"  class ="col-xs-12 col-md-7 padding-top-bottom-10">© 2021 Domino's Pizza. All Rights Reserved</p>
+        </div>
+      </div>
+    </footer>
     <script src="./assets/script/index.js"></script>
   </body>
 </html>
