--- a/index.html
+++ b/index.html
@@ -472,38 +472,38 @@
           <div class="col-xs-12 text-center">
             <div class="social-container">
               <div class="tooltip tel">
-              <a href="#" class="col-xs-4 ">
-               <img src="assets/images/logos/070012525.svg" alt='070012525'class='telFooter' id='tel070012525'>
-               <img src="assets/images/tel.svg" alt='telefon' class='telFooter' id='telImage'>
+              <a href="#" class="telFooter">
+               <img src="assets/images/logos/070012525.svg" alt='070012525' id='tel070012525'>
+               <img src="assets/images/tel.svg" alt='telefon' id='telImage'>
                <span class="tooltiptext">0700-1-2525</span>
               </a>
             </div>
             <div class="tooltip">
-              <a class="col-xs-4" href='https://www.facebook.com/DominosBulgaria'>
+              <a href='https://www.facebook.com/DominosBulgaria'>
                 <img src="assets/images/logos/facebook.svg" alt="facebook">
                 <span class="tooltiptext">Facebook</span>
               </a>
               </div>
               <div class="tooltip">
-              <a class="col-xs-4" href='https://twitter.com/DominosBulgaria'>
+              <a href='https://twitter.com/DominosBulgaria'>
                 <img src="assets/images/logos/twitter.svg" alt="twitter">
                 <span class="tooltiptext">Twitter</span>
               </a>
             </div>
             <div class="tooltip">
-              <a class="col-xs-4" href='https://www.instagram.com/dominos_bg/'>
+              <a href='https://www.instagram.com/dominos_bg/'>
                 <img src="assets/images/logos/instagram.svg" alt="instagram">
                 <span class="tooltiptext">Instagram</span>
               </a>
             </div>
             <div class="tooltip">
-              <a class="col-xs-4" href='https://plus.google.com/u/0/111958562895938630854'>
+              <a href='https://plus.google.com/u/0/111958562895938630854'>
                 <img src="assets/images/logos/googleplus.svg" alt="googleplus">
                 <span class="tooltiptext">Google+</span>
               </a>
             </div>
             <div class="tooltip">
-              <a class="col-xs-4" href='https://www.youtube.com/channel/UCUTBiIm_r68gSa1JY2tgDLg'>
+              <a  href='https://www.youtube.com/channel/UCUTBiIm_r68gSa1JY2tgDLg'>
                 <img src="assets/images/logos/youtube.svg" alt="youtube">
                 <span class="tooltiptext">Youtube</span>
               </a>
@@ -515,7 +515,7 @@
       </div>
       <div class='light-grey-bg'>
         <div class='footer-container'>
-          <p id="copyright"  class ="col-xs-12 col-md-7 padding-top-bottom-10">© 2021 Domino's Pizza. All Rights Reserved</p>
+          <p id="copyright"  class ="padding-top-bottom-10">© 2021 Domino's Pizza. All Rights Reserved</p>
         </div>
       </div>
     </footer>
