Fixed tooltips position

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
     <footer class='margin-top-25'>
       <div class='white'>
         <div class='footer-container'>
-          <div class='col-sm-12 padding-top-20 text-center'>
+          <div class='padding-top-20 text-center'>
             <ul class="list">
               <li>
                 <a href="#" class="menu-color open-modal">МЕНЮ</a>
@@ -469,7 +469,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-xs-12 text-center">
+          <div class="text-center">
             <div class="social-container">
               <div class="tooltip tel">
               <a href="#" class="telFooter">
