--- a/index.html
+++ b/index.html
@@ -309,19 +309,20 @@
           </div>
         </div>
       </div>
+      <!-- a placeholder for the header -->
       <div id="placeholder"></div>
       <div id="menuPage">
         <nav id="menuNav"></nav>
-        <div id="allDealsPage"></div>
-        <div id="allPizzasPage"></div>
-        <div id="allStartersPage"></div>
-        <div id="allChickenPage"></div>
-        <div id="allPastaPage"></div>
-        <div id="allSaladsPage"></div>
-        <div id="allSandwichPage"></div>
-        <div id="allSaucesPage"></div>
-        <div id="allDessertsPage"></div>
-        <div id="allDrinksPage"></div>
+        <div id="allDealsPage" class="card-container main-wrapper"></div>
+        <div id="allPizzasPage" class="card-container main-wrapper"></div>
+        <div id="allStartersPage" class="card-container main-wrapper"></div>
+        <div id="allChickenPage" class="card-container main-wrapper"></div>
+        <div id="allPastaPage" class="card-container main-wrapper"></div>
+        <div id="allSaladsPage" class="card-container main-wrapper"></div>
+        <div id="allSandwichPage" class="card-container main-wrapper"></div>
+        <div id="allSaucesPage" class="card-container main-wrapper"></div>
+        <div id="allDessertsPage" class="card-container main-wrapper"></div>
+        <div id="allDrinksPage" class="card-container main-wrapper"></div>
       </div>
       <div id="registrationPage" class="main-wrapper rounded">
         <form action="">
