--- a/index.html
+++ b/index.html
@@ -671,6 +671,7 @@
     </script>
     <script src="./assets/script/utils-handlebars.js"></script>
     <script src="./assets/script/constants-bg.js"></script>
+    <script src="./assets/script/selectorsConstants.js"></script>
 
     <!-- JSON files -->
     <script src="./assets/script/data/allIngredientsData.js"></script>
@@ -703,6 +704,7 @@
     <script src="./assets/script/classes/StarterService.js"></script>
 
     <script src="./assets/script/productsController.js"></script>
+    <script src="./assets/script/registrationPageController.js"></script>
     <script src="./assets/script/index.js"></script>
   </body>
 </html>
