--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
         <div class="box-wrapper">
           <div class="product-image" style="background-image: url(assets/images/{{this.image}});"></div>
         <h2 class="product-title">
-          <span class="decoration-title red-decoration-title">{{title}}</span>
+          <span class="decoration-title red-decoration-title">{{this.title}}</span>
         </h2>
         <div class="dots-seperator"></div>
         <div class="product-wrapper">
@@ -725,7 +725,7 @@
             <div class="price">
               <p class='text-bold'>Цена</p>
               <div class="product-total-price">
-              <span class="total-price">{{this.price}}лв</span>
+              <span class="total-price">{{this.price.[1]}} лв</span>
             </div>
               <div class="save-20 hidden-xs">
                 <em>
