--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
     <script src="./assets/script/classes/UserService.js"></script>
     
     <script src="./assets/script/productsController.js"></script>
-    <!-- <script src="./assets/script/registrationPageController.js"></script> -->
+    <script src="./assets/script/registrationPageController.js"></script>
     <script src="./assets/script/index.js"></script>
   </body>
 </html>
