Added more methods to CustomizableProdustModel and IngredientService

--- a/index.html
+++ b/index.html
@@ -702,6 +702,7 @@
     <script src="./assets/script/classes/ProductModel.js"></script>
     <script src="./assets/script/classes/SimpleProductModel.js"></script>
     <script src="./assets/script/classes/CustomizableProductModel.js"></script>
+    <script src="./assets/script/classes/CustomizableProductManagerModel.js"></script>
 
     <!-- All product services -->
     <script src="./assets/script/classes/IngredientService.js"></script>
