Hiding 'Order now' button while in menu

--- a/index.html
+++ b/index.html
@@ -117,11 +117,10 @@
                   >МЕНЮ</a
                 >
               </li>
-              <li>
+              <li id="orderNowBtn">
                 <a
                   href="#allDeals"
                   class="button font-bold cart-btn text-center"
-                  id="orderNowBtn"
                   data-type="order"
                   >ПОРЪЧАЙ СЕГА</a
                 >
